--- a/style.css
+++ b/style.css
@@ -20,3 +20,11 @@ body {
 #profil-name{
     text-align: center;
 }
+#footer{
+    width: 100%;
+    height: 50px;
+    line-height: 50 px;
+    background-color: burlywood;
+    text-align: center;
+    color: white;
+}
