--- a/style.css
+++ b/style.css
@@ -20,12 +20,16 @@ body {
 #profil-name{
     text-align: center;
 }
-<<<<<<< HEAD
-#footer{
-=======
 
+#footer{
+    width: 100%;
+    height: 50px;
+    line-height: 50 px;
+    background-color: burlywood;
+    text-align: center;
+    color: white;
+}
 #header{
->>>>>>> development-1.0
     width: 100%;
     height: 50px;
     line-height: 50 px;
