--- a/style.css
+++ b/style.css
@@ -1,13 +1,20 @@
 body {
     width: 100%;
     height: 100%;
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
     background-color: antiquewhite;
     font-family: Arial, Helvetica, sans-serif;
 }
 
-
+#header{
+    width: 100%;
+    height: 50px;
+    line-height: 50px;
+    background-color: burlywood;
+    text-align: center;
+    color: white;
+}
 #profile-container{
     max-width: 300px;
     margin: 80px auto;
@@ -16,12 +23,12 @@ body {
     border-radius: 6px;
 }
 
-#profile-image {
+#profile-image{
     width: 100%;
     height: auto;
 }
 
-#profil-name{
+#profile-name{
     text-align: center;
 }
 
@@ -30,15 +37,7 @@ body {
     height: 50px;
     position: absolute;
     bottom: 0;
-    line-height: 50 px;
-    background-color: burlywood;
-    text-align: center;
-    color: white;
-}
-#header{
-    width: 100%;
-    height: 50px;
-    line-height: 50 px;
+    line-height: 50px;
     background-color: burlywood;
     text-align: center;
     color: white;
