--- a/style.css
+++ b/style.css
@@ -17,7 +17,10 @@ body {
     height: auto;
 }
 
-#profil-name{
+#profile-name{
+    text-align: center;
+}
+#profil-job{
     text-align: center;
 }
 
